rnsc/tests/snapshots/error-parser-mangled_name_directive-multiple_definitions.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that multiple .mangled_name directives are detected and reported.
; Expected error: E-035 (multiple mangled names)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name FirstName
    .mangled_name SecondName
.inner_end

.class_end
----- STDERR -----
[E-035] Error: multiple .mangled_name directives in inner class
    ╭─[ test_data/rns_integration/error/parser/mangled_name_directive/multiple_definitions.rns:10:5 ]
    │
  9 │     .mangled_name FirstName
    │     ──────┬──────  
    │           ╰──────── first .mangled_name directive defined here with name 'FirstName'
 10 │     .mangled_name SecondName
    │     ──────┬──────  
    │           ╰──────── but another .mangled_name directive defined here with name 'SecondName'
    │ 
    │ Help: An inner class can only have one .mangled_name directive. Remove the duplicates.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-035
────╯
----- JAVAP -----
not generated
